[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pltview"
version = "0.3.0"
description = "Ultra-fast C viewer for AMReX plotfiles, inspired by ncview"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "wang1202", email = "aaronaktv@gmail.com"}
]
keywords = ["amrex", "plotfile", "visualization", "scientific computing", "c", "x11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
pltview = "pltview_entry:main"

[project.urls]
Homepage = "https://github.com/wang1202/pltview"
Repository = "https://github.com/wang1202/pltview"

[tool.setuptools]
py-modules = ["pltview_entry"]
packages = ["pltview_pkg"]

[tool.setuptools.package-data]
pltview_pkg = ["pltview_bin"]
